--- a/src/collectd.conf.pod
+++ b/src/collectd.conf.pod
@@ -2262,7 +2262,7 @@ Type-instance to use. Defaults to the current map key or current string array el
 
 =head2 Plugin C<curl_jolokia>
 
-The B<curl_jolokia plugin> collects values from MBeanServevr - servlet engines equipped 
+The B<curl_jolokia plugin> collects values from MBeanServevr - servlet engines equipped
 with the jolokia (L<https://jolokia.org>) MBean. It sends a pre-configured
 JSON-Postbody to the servlet via HTTP commanding the jolokia Bean to reply with
 a singe JSON equipped with all JMX counters requested.
@@ -2270,7 +2270,7 @@ By reducing TCP roundtrips in comparison to conventional JMX clients that
 query one value via tcp at a time, it can return hundrets of values in one roundtrip.
 Moreof - no java binding is required in collectd to do so.
 
-It uses B<libyajl> (L<https://lloyd.github.io/yajl/>) to parse the 
+It uses B<libyajl> (L<https://lloyd.github.io/yajl/>) to parse the
 Jolokia JSON reply retrieved via B<libcurl> (L<http://curl.haxx.se/>)
 
  <Plugin curl_jolokia>
@@ -2294,21 +2294,21 @@ Jolokia JSON reply retrieved via B<libcurl> (L<http://curl.haxx.se/>)
    </BeanName>
   </Plugin>
 
-The plugin is intended to be written in a simple manner. Thus it doesn't 
-try to solve the task of generating the jolokia post data, or automatically 
+The plugin is intended to be written in a simple manner. Thus it doesn't
+try to solve the task of generating the jolokia post data, or automatically
 map the values, but rather leans on a verbose config containing the prepared
 flat JSON post data and a config section per gauge transformed (as one sample shown
-above). However, Jolokia can output all available gauges, and we have a python 
-script to filter them, and generate a configuration for you: 
+above). However, Jolokia can output all available gauges, and we have a python
+script to filter them, and generate a configuration for you:
 
   jolokia_2_collectcfg.py
 
-it can gather all interesting gauges, write a simple one value per line config 
+it can gather all interesting gauges, write a simple one value per line config
 for itself and subsequent calls.
-You can remove lines from this file manually, or create filter lists. 
-You then use the script to generate a collectd config. 
-The script can then inspect data files from some testruns, and remove 
-all gauges, that don't contain any movement. 
+You can remove lines from this file manually, or create filter lists.
+You then use the script to generate a collectd config.
+The script can then inspect data files from some testruns, and remove
+all gauges, that don't contain any movement.
 
 The base config looks like this:
 
@@ -2373,8 +2373,8 @@ The name space the Bean resides under
 
 =item B<AttributeName> I<AttributeName>
 
-A bean can contain several Attributes with gauges. Each one can be matched by a 
-AttributeName section or be ignored. 
+A bean can contain several Attributes with gauges. Each one can be matched by a
+AttributeName section or be ignored.
 
 =item B<Attribute> I<Attribute>
 
@@ -3697,7 +3697,7 @@ is 'GPU ID'-'GPU name'
 
 =item B<InstanceByGPUName>
 
-If set to false, the GPU name will not be part of the plugin instance. The 
+If set to false, the GPU name will not be part of the plugin instance. The
 default is 'GPU ID'-'GPU name'
 
 =back
@@ -4661,16 +4661,16 @@ TCP-Port to connect to. Defaults to B<411>.
 =back
 
 =head2 Plugin C<mdevents >
- 
+
 The I< mdevents > plugin collects status changes from md (Linux software RAID) devices.
 
 RAID arrays are meant to allow users/administrators to keep systems up and
 running, in case of common hardware problems (disk failure). Mdadm is the
-standard software RAID management tool for Linux. It provides the ability to 
-monitor "metadata event" occurring such as disk failures, clean-to-dirty 
-transitions, and etc. The kernel provides the ability to report such actions to 
-the userspace via sysfs, and mdadm takes action accordingly with the monitoring 
-capability. The mdmon polls the /sys looking for changes in the entries 
+standard software RAID management tool for Linux. It provides the ability to
+monitor "metadata event" occurring such as disk failures, clean-to-dirty
+transitions, and etc. The kernel provides the ability to report such actions to
+the userspace via sysfs, and mdadm takes action accordingly with the monitoring
+capability. The mdmon polls the /sys looking for changes in the entries
 array_state, sync_action, and per disk state attribute files. This is meaningful
 for RAID1, 5 and 10 only.
 
@@ -4704,9 +4704,9 @@ Mdevents plugin's configuration is mostly based on IgnoreList, which is a collec
 utility. User can specify what particular events/RAID arrays lie in his interest.
 Setting of IgnoreEvent/IgnoreArray booleans won't take effect if Event/Array config
 lists are empty - plugin will accept entry anyway.
- 
+
 B<Options:>
- 
+
 =over 4
 
 =item B<Event> I<"EventName">
@@ -8094,7 +8094,7 @@ name will be monitored for EXECs and EXITs.
 
 =item B<ProcessRegex> I<regex>
 
-Enumerate a process pattern to monitor.  All processes that match this 
+Enumerate a process pattern to monitor.  All processes that match this
 regular expression will be monitored for EXECs and EXITs.
 
 =back
@@ -9184,7 +9184,7 @@ Listen on this IP on this port for incoming rsyslog messages.
 
 =item B<BufferSize> I<length>
 
-Maximum allowed size for incoming rsyslog messages.  Messages that exceed 
+Maximum allowed size for incoming rsyslog messages.  Messages that exceed
 this number will be truncated to this size.  Default is 4096 bytes.
 
 =item B<BufferLength> I<length>
@@ -11151,6 +11151,7 @@ miliseconds while plugin instance, type and type instance are sent as tags.
 
  <Plugin "write_influxdb_udp">
    Server "influxdb.internal.tld"
+   TimePrecision "ms"
    StoreRates "yes"
  </Plugin>
 
@@ -11163,6 +11164,14 @@ The B<Server> statement sets the server to send datagrams to.
 The argument I<Host> may be a hostname, an IPv4 address or an IPv6 address. The
 optional second argument specifies a port number or a service name. If not
 given, the default, B<8089>, is used.
+
+=item B<TimePrecision> I<ms>|I<us>|I<ns>
+
+The B<TimePrecision> option sets the precision of the timestamps sent to
+InfluxDB. It must match the precision set in InfluxDB line protocol
+configuration.
+
+The defaut value is I<ms>. Note that InfluxDB default may differ.
 
 =item B<TimeToLive> I<1-255>
 
